--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac98913650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d3aa57490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac98311890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac98628e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d3a448dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d3a448fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac9890d8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac98b92750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d3acd26d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d3acd28d0&gt;]</pre>
 </div>
 
 </div>
