--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb05500310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d9f72b7d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb05222d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb05222f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d9f3d5a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d9f3d5c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb05ab0650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb05ab0850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d9f9aa410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d9f9aa610&gt;]</pre>
 </div>
 
 </div>
