--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d9f72b7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4609e87bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d9f3d5a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8d9f3d5c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f460987dad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f460987dcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d9f9aa410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8d9f9aa610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f460a1103d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f460a1105d0&gt;]</pre>
 </div>
 
 </div>
