--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1a89b3c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee5f028b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1a86c9d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1a86c9f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fee5ea1afd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fee5ea27210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1a8f59690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1a8f598d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fee5f2a0890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fee5f2a0a90&gt;]</pre>
 </div>
 
 </div>
