--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd0be989390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47168f40d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0be6c0c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0be6c0e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47162ace10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47162acfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0bec1a590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0bec1a790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4716b35710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4716b35910&gt;]</pre>
 </div>
 
 </div>
