--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1eb0e15f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f81ba9a1790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1eb0e60050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1eb0e60250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f81ba6babd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f81ba6badd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1eb10af950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1eb10afb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f81bac24490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f81bac24690&gt;]</pre>
 </div>
 
 </div>
