--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fadb2467490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe8114a6dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fadb2194cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fadb2194ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8114ecd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8111be6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fadb26fd5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fadb26fd7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8114910d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe811a54850&gt;]</pre>
 </div>
 
 </div>
