--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07fb41e7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdac65d3b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f07fb16bb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f07fb16bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdac62f1b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdac62f1d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f07fb6d5490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f07fb6d5690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdac6b82490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdac6b82690&gt;]</pre>
 </div>
 
 </div>
