--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdac65d3b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc925b0fa10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdac62f1b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdac62f1d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc925b75d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc925b75f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdac6b82490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdac6b82690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc926136a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc9260e3850&gt;]</pre>
 </div>
 
 </div>
