--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc925b0fa10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11b2c2ea50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc925b75d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc925b75f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11b2f8a790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11b2956090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc926136a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9260e3850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11b2c22510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11b31cd8d0&gt;]</pre>
 </div>
 
 </div>
