--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f69aeb94d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa8651354d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f69aebdbbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69aebdbdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa864e82b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa864e82d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f69af145510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f69af145710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8653ec550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8653ec750&gt;]</pre>
 </div>
 
 </div>
