--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f57c365f590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7cfea497d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57c36a7c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57c36a7e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cfe76db10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7cfe76dd10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f57c3c0f510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f57c3c0f750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cfecd7410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7cfecd7610&gt;]</pre>
 </div>
 
 </div>
