--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7cfea497d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef3a9d2610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cfe76db10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7cfe76dd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fef3b3007d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fef3afb8fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cfecd7410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7cfecd7610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fef3b5426d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fef3b5428d0&gt;]</pre>
 </div>
 
 </div>
