--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef3a9d2610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb5fe4d850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef3b3007d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef3afb8fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb5f846d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb5f846f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef3b5426d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef3b5428d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb600d45d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb600d47d0&gt;]</pre>
 </div>
 
 </div>
