--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5d18b32890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff943f60a90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d18e219d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5d19139e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff943fccb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff943fccd50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d196ee990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5d196a3750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff944534490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff944534690&gt;]</pre>
 </div>
 
 </div>
