--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c1bf6b810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3633fad50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c1bc72a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c1bc72c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc363439d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc363439f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c1c50d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c1c50d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3639a8610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc3639a8810&gt;]</pre>
 </div>
 
 </div>
