--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c3447c850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36f37f47d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c33e68b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c33e68d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36f3831d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36f3831f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c34701550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c34701750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36f3d9f690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36f3d9f890&gt;]</pre>
 </div>
 
 </div>
