--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9deac86950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e1fd1ebd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dea9b9c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9dea9b9e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e1fa30a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e1fa30c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9deb24c590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9deb24c790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e1ff9c390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e1ff9c590&gt;]</pre>
 </div>
 
 </div>
