--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe153d0e7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9022a78b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1536edc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1536ede90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9022ab3ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9022ab3cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe153c59550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe153c59750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f902301c450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f902301c650&gt;]</pre>
 </div>
 
 </div>
